--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# vscode configurations
+.vscode/
+
+# Files to test whether the codes work well
+test.py
+results/
+jjuke/modules/data/
